MWPW-139848 (fix): CaaS Card collection CTA letter cutoff

--- a/less/components/consonant/cards/product-card.less
+++ b/less/components/consonant/cards/product-card.less
@@ -23,7 +23,7 @@
             display: -webkit-box;
             -webkit-box-orient: vertical;
             max-height: 1.375rem * 2;
-            margin: 6px 0 16px;
+            margin: 6px 0 10px;
             text-decoration: none;
             word-break: break-word;
             -webkit-line-clamp: 2;
